Change from Chrome to Browser (as its not just for Chromium)

--- a/extension/devtools-registration.html
+++ b/extension/devtools-registration.html
@@ -10,7 +10,7 @@
     <p>
         Note this page is never shown in the UI.
         It's one job is to run the registration script,
-        where it uses the Chrome JS APIs to register a DevTools panel
+        where it uses the browser JS APIs to register a DevTools panel
     </p>
 </body>
 </html>
